--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 	compileSdkVersion versions.compileSdk
 	defaultConfig {
 		applicationId "com.wojciechkolendo.loadingview.sample"
-		minSdkVersion versions.minSdk
+		minSdkVersion 27
 		targetSdkVersion versions.targetSdk
 		versionCode 1
 		versionName "1.0.0"
@@ -29,8 +29,7 @@ android {
 dependencies {
 	implementation fileTree(include: ['*.jar'], dir: 'libs')
 	implementation project(':loadingview')
-	implementation 'com.google.android.material:material:1.0.0'
-	implementation 'androidx.appcompat:appcompat:1.0.2'
-	implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+	implementation 'com.google.android.material:material:1.1.0-alpha04'
+	implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
 	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
