--- a/loadingview/build.gradle
+++ b/loadingview/build.gradle
@@ -32,7 +32,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${versions.kotlin}"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
 }
 
 apply from: '../maven-release.gradle'
